# fastapi-genesis

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json
.github/: FUNDING.yml
hooks/: pre_gen_project.py
{{cookiecutter.repo_name}}/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
{{cookiecutter.repo_name}}/.github/: dependabot.yml
{{cookiecutter.repo_name}}/.github/workflows/: .gitkeep  ci.yaml  release.yml
{{cookiecutter.repo_name}}/alembic/: env.py
{{cookiecutter.repo_name}}/app/: __init__.py  config.py  db.py  main.py  settings.py
{{cookiecutter.repo_name}}/app/dao/: base.py  user.py
{{cookiecutter.repo_name}}/app/daos/: base.py  user.py
{{cookiecutter.repo_name}}/app/models/: base.py  user.py
{{cookiecutter.repo_name}}/app/routers/: api_router.py  user.py
{{cookiecutter.repo_name}}/app/schemas/: token.py  user.py
{{cookiecutter.repo_name}}/app/services/: user.py  utils.py
{{cookiecutter.repo_name}}/scripts/: autogenerate.sh  downgrade.sh
{{cookiecutter.repo_name}}/static/: welcome.txt
