[tool.poetry]
name = "fastapi-genesis"
version = "0.1.0"
description = "FastAPI Genesis code template - Good luck!!! :)"
authors = ["Luka Vuksanovic <luka.vuksanovic35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.7.0"
alembic = "^1.11.1"
loguru = "^0.7.0"
flake8 = "^6.0.0"
docker-compose = "^1.29.2"
fastapi = {extras = ["all"], version = "^0.100.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
cookiecutter = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
